--- a/HeboTech.Wiper/MainWindow.xaml
+++ b/HeboTech.Wiper/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HeboTech.Wiper"
         mc:Ignorable="d"
+        Loaded="Window_Loaded"
         Closing="Window_Closing"
         Title="Wiper - HeboTech" Height="350" Width="600">
     <Grid>
