--- a/Installer/HeboTech.Wiper.Installer/Product.wxs
+++ b/Installer/HeboTech.Wiper.Installer/Product.wxs
@@ -8,7 +8,7 @@
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <Media Id="1" Cabinet="product.cab" EmbedCab="yes"/>
 
-    <Feature Id="ProductFeature" Title="HeboTech.Wiper.Installer" Level="1">
+    <Feature Id="ProductFeature" Title="HeboTech.Wiper" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
       <ComponentRef Id="ApplicationShortcut"/>
     </Feature>
